# FDGC

./: CMakeLists.txt  README.md
include/: fdgc.h
src/: fdgc.c
tests/: bulk_validate_string.c  validate_string_prod.c
